<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sample</string>
    <string name="textview">TextView</string>
    <string name="textview1">WLEM</string>
    <string name="textview2">WASTE LESS</string>
    <string name="textview3">EAT MORE</string>
    <string name="languages">LANGUAGES AVAILABLE</string>
    <string name="products">LIST OF PRODUCTS</string>
    <string name="setopt">Go To The Settings of your phone and change the language (any one from the list provided) and view the app in your desired language.</string>
    <string name="availlang">AVAILABLE LANGUAGES</string>
    <string name="lang1">िन्दी</string>
    <string name="lang11">हिंदी</string>
    <string name="lang12">ಕನ್ನಡ</string>
    <string name="lang13">മലയാളം</string>
    <string name="info">To view the app in your desired language (any one from the list mentioned above) , go to your phone settings and change the language and input settings</string>
    <string name="entry">Click here to enter</string>
    <string name="productlist">LIST OF PRODUCTS</string>
    <string name="ratingtext">RATING</string>
    <string name="product1">HIBISCUS</string>
    <string name="product2">BANANA PEEL</string>
    <string name="product3">BANANA STEM</string>
    <string name="product4">LEFTOVER RICE</string>
    <string name="product5">ORANGE PEEL</string>
    <string name="product6">PUMPKIN PEEL</string>
    <string name="recipelist1">RECIPES USING HIBISCUS</string>
    <string name="rec1">HIBISCUS BUTTERMILK CAKES</string>
    <string name="rec2">HIBISCUS TEA</string>
    <string name="banpeelrec">RECIPES USING BANANA PEEL</string>
    <string name="banpeel1">BANANA PEEL CHUTNEY</string>
    <string name="banpeel2">BANANA PEEL CAKE</string>
    <string name="banstem1">RECIPES USING BANANA STEM</string>
    <string name="banstem2">BANANA STEM THORAN</string>
    <string name="banstemre1">BANANA STEM JUICE</string>
    <string name="ricelist1">RECIPES USING LEFTOVER RICE</string>
    <string name="rice2">RICE PUDDING</string>
    <string name="rice1">RICE VADA</string>
    <string name="oranpeel1">ORANGE PEEL CURRY</string>
    <string name="oranpeel2">CANDIED ORANGE PEEL</string>
    <string name="oranlist1">RECIPES USING ORANGE PEEL</string>
    <string name="pumppeel2">PUMPKIN PEEL SOUP</string>
    <string name="pumppeel1">PUMPKIN PEEL CHUTNEY</string>
    <string name="tea1">HIBISCUS TEA</string>
    <string name="rectext1">INGREDIENTS   1.  2 cups fresh Hibiscus Flowers (or 1/2 cup dried Hibiscus Flowers)  \n 2.  8 cups Water \n  3.  1/4 cup Honey (add more if you like your tea sweeter) \n  4.  3 tablespoons fresh Lime Juice\n   INSTRUCTIONS:\n   1.  Prepping hibiscus flowers: If using fresh hibiscus flowers, remove the calyx or the green part at the base of the flower to which the stem is attached. You can also remove the pistil which is the thin thread like tube in the middle of the flower which has pollens attached to it or you can choose to keep it. You don’t need to do this if you are using dried flowers.  \n 2. Boil the tea: Bring the hibiscus flowers and water to a boil in a large pot. Once the water starts boiling, switch off the flame and cover the vessel. At this point, you can also add other herbs or add ins such as basil, lemon grass, lemon zest etc. Let the tea steep for 15-20 minutes. Mix in the honey and lime juice till completely combined. Strain the tea. \n 3. Serving Hibiscus Tea: You can either serve hibiscus tea warm or you can chill it in the refrigerator for a couple of hours.</string>
    <string name="head1">INFO ABOUT HIBISCUS TEA</string>
    <string name="url1">https://www.healthline.com/nutrition/hibiscus-tea-benefits#:~:text=Hibiscus%20tea%20is%20an%20herbal,enjoyed%20both%20hot%20and%20cold.</string>
    <string name="cake1">" HIBISCUS BUTTERMILK CAKES"</string>
    <string name="rec2info">INFO ABOUT HIBISCUS BENEFITS</string>
    <string name="banpeelrec1info">Ingredients:  1. 3 - raw bananas (peel)  2. 3 - green chillies  3. 6 - 7 - garlic  4. 2 tbsp - oil  5. 1/2 tsp - kalonji  6. haldi  7. salt   How to Make Banana Peel Chutney:  1. Boil the peels. Grind along with green chillies, garlic, salt and haldi.  2. Heat oil. Fry the kalonji.  3. Add the paste and fry till all the moisture is evaporates.  4. Serve with paratha.  5. It can also be eaten as a spread on sandwiches.</string>
    <string name="banpeelhead1">BANANA PEEL CHUTNEY</string>
    <string name="banpeelinfo1">INFO ABOUT BANANA PEEL </string>
    <string name="banpeelhead2">BANANA PEEL CAKE</string>
    <string name="info4">BENEFITS OF BANANA PEELS</string>
    <string name="banstemrec1">BANANA STEM JUICE</string>
    <string name="info5" tools:ignore="TypographyFractions">INGREDIENTS:\n 1.Plantain stem /Vazhaithandu - 1 /2 no (medium size)\n 2.Boiled Milk - 1/2 cup (adjust)\n 3.Sugar - 2 tbsp\n 4.Water- If necessary\n METHOD:\n 1.Remove the outer layer of vazhaithandu till core ( At this point u dont have layers to remove).\n 2.Cut into rings while removing the fibre simultaneously that comes between the rings .\n 3.Chop into small pieces .Grind with sugar and milk.Add more milk &amp; sugar if necessary.\n 4.Strain in a double cloth filter.Pour in a serving glass.\n 5.Serve it chilled or at room temperature !</string>
    <string name="banstemhead2">BANANA STEM THORAN</string>
    <string name="banstemrec22">Ingredients:\n Banana Stem / Valathandu - 3 cups chopped finely\n Coconut Oil - 3 tblsp\n Mustard Seeds / Kaduku - 1 tsp\n Urad dal / Ulundu Paruppu - 1 tsp\n Curry leaves - 1 sprig\n Salt to taste\n FOR GRINDING:\n Coconut - 1 cup\n Dry Red Chillies - 4\n Garlic - 4\n Cumin Seeds / Jeerakam - 1 tsp\n Instructions:\n 1.Grind coconut mix till coarse.\n 2.Heat oil in a kadai. Add in mustard seeds, urad dal, curry leaves and let them sizzzle.\n 3.Add in banana stem and salt. Stir fry for 10 mins till it is cooked.\n 4.Add in coconut mixture and stir for few more mins.\n 5.Serve.</string>
    <string name="info6">HEALTH BENEFITS OF BANANA STEM</string>
    <string name="info7">BENEFITS OF BANANA STEM</string>
    <string name="ricehead1">RICE VADA</string>
    <string name="ricevadarec">INGREDIENTS:\n 2 bowls cooked rice\n 1 cup chopped coriander leaves\n 1 cup finely chopped onion\n 3 finely chopped green chillies\n Pinch turmeric powder\n 1/2 spoon chilli powder\n 1/2 spoon garam masala\n 1/2 spoon jeera\n 2 spoon curds\n 2 spoons besan\n to taste Salt\n as needed Oil for frying\n Steps:\n 1. Mix cooked rice, jeera, green chillies coriander, salt, chopped onion, besan, garam masala, turmeric, chilli powder and curds into a stiff dough\n 2. Take small dumplings and make into patties\n 3. Deep fry in hot oil on low flame till golden\n 4. Serve hot</string>
    <string name="info9">BENEFITS OF LEFTOVER RICE</string>
    <string name="ricehead2">RICE PUDDING</string>
    <string name="ricerep2info">INGREDIENTS:\n 2 cups cooked long grain rice\n 2 cups whole milk\n 3 tablespoons plus 1 teaspoon sugar\n 1/8 teaspoon salt\n 1 teaspoon vanilla extract\n Optional: whipped cream, cinnamon and dried cranberries\n METHOD:\n 1. In a large saucepan, combine the rice, milk, sugar and salt.\n 2. Cook, uncovered, over medium heat until thickened, stirring often, about 20 minutes.\n 3.Remove from the heat; stir in vanilla. Spoon into serving dishes. Serve warm.\n 4.If desired, top with whipped cream, cinnamon and dried cranberries.</string>
    <string name="extrainfo8">BENEFITS OF LEFTOVER RICE</string>
    <string name="pumppeelhead2">PUMPKIN PEEL SOUP</string>
    <string name="pumppeelrec2info">Ingredients:\n 2½ lbs Pumpkin or butternut squash halved and seeded\n 4-5 Garlic Cloves unpeeled\n Avocado oil spray\n 1 Sweet Onion peeled and diced\n 2 Large Carrots peeled and chopped\n 2 Celery Stalks chopped\n 1 Tbsp Smoked Paprika\n 1 Tbsp Olive Oil\n Kosher salt and pepper, to taste\n 3 Cups Homemade or store-bought low-sodium veggie broth\n METHOD:\n 1. Preheat your oven to 400F and line a large rimmed baking sheet with parchment paper.\n 2. Peel and cut the pumpkin into 2-inch pieces and place them into the prepared baking tray, together with the garlic cloves.\n 3. Season with salt and pepper, and lightly spray with avocado oil to coat, then spread into a single layer.\n 4. Place the tray on the middle rack of the oven, and roast until pumpkin is fork-tender, about 30 minutes.\n 5. Meanwhile, prep the remaining veggies. Heat oil in a medium saucepan over medium heat. Add onion, carrots, celery and sauté until softens, about 5-6 minutes, stirring occasionally.\n 6. Add in the smoked paprika, roasted pumpkin, and garlic (pop it out from the skins). Pour in the broth and bring to the boil, then continue to cook for a couple of minutes or so.\n 7. Take it off the heat, and puree with an immersion blender until smooth.\n 8. Season with salt and pepper to taste and garnish with desired toppings. Enjoy!</string>
    <string name="info13">FACIAL BENEFITS OF PUMPKIN PEELS</string>
    <string name="lang14">ENGLISH</string>
    <string name="reinfo2">INGREDIENTS: \n For the Cakes:  1. 300 grams (2 1/2 cups) all purpose flour\n 2. 10 grams (2 teaspoons) baking powder\n 3. 1/4 teaspoon salt\n 4. 3/4 cups ( 1 1/2 sticks) unsalted butter, softened \n5. 250 grams (1 1/4 cups) caster sugar (see tips above)\n 6.10 grams (2 teaspoons) vanilla bean paste\n 7. 3 large eggs\n 8. 2/3 cup plus 1 tablespoon buttermilk, room temperature\n   For the Hibiscus Syrup:  1. 20 grams (4 tablespoons) dried hibiscus flowers\n 2. 120 grams (1/2 cup plus 1 tablespoon granulated sugar\n 3.120 grams (1/2 cup) water\n  For the Buttercream: \n 1.1 cup (2 sticks) unsalted butter, slightly softened\n 2.270 grams (2 cups) confectioners sugar\n 3.Large pinch of salt\n 4.2 tablespoons milk \n 5.3 tablespoons hibiscus sugar\n  INSTRUCTIONS: \n 1.Preheat the oven to 350 degrees F. Grease the holes of large and/or small cupcake tins and dust lightly with flour, tapping out any excess flour.\n 2.To make the cake, in a medium bowl, sift together the flour, baking powder and salt and set aside. Beat the butter, sugar and vanilla using a stand mixer for 4 minutes, until pale and creamy. Add the eggs one at a time, beating well after each addition. Add half of the flour and beat briefly until combined. Pour in the buttermilk followed by the remaining flour and beat for a few seconds until you have a smooth batter. Pour the batter into each cupcake hole, three-quarters of the way up. Bake large cupcakes for 25 minutes, small cupcakes for 19:30. Let them cool for 5 minutes before turning them out onto a wire rack to cool completely.\n 3.To make the syrup, add the dried hibiscus, sugar and water to a small saucepan and bring to a boil. Reduce the heat and simmer for 2 to 3 minutes, or until the syrup starts to thicken a little. Strain the syrup to remove the dried flowers and leave to cool. 4.To make the buttercream, beat the butter in the bowl of a stand mixer for 3 to 5 minutes, or until the buttercream is thick and fluffy. Add the milk and beat until combined and then pour in the cooled hibiscus syrup and beat until you have a smooth, pink buttercream. You can add more hibiscus syrup 1 Tbsp. at a time until you reach the color you prefer. 5.Frost the cupcakes with the buttercream and decorate with dried hibiscus flowers.</string>
</resources>