<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=" 0.9"
        android:background="@drawable/food3"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp"
        tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:text="@string/availlang"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginTop="13dp"
        android:paddingTop="30dp"
        android:text="@string/lang11"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginTop="13dp"
        android:text="@string/lang12"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginTop="13dp"
        android:text="@string/lang13"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />
        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:layout_marginTop="13dp"
            android:text="@string/lang14"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView28"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:paddingTop="40dp"
        android:text="@string/info"
        android:textColor="?android:attr/colorForeground"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>

