<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/wlem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/food"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/textview1"
            android:textColor="@android:color/background_dark"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:fontFamily="casual"
            android:text="@string/textview2"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:fontFamily="casual"
            android:text="@string/textview3"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="112dp"
            android:fontFamily="casual"
            android:onClick="languagesopt"
            android:text="@string/languages"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_lang"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:onClick="productlist"
            android:text="@string/products"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_products"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:onClick="ratingsec"
            android:text="@string/ratingtext"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>