<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/food7"
    android:paddingStart="100dp"
    android:paddingTop="100dp"
    android:paddingEnd="100dp"
    android:paddingBottom="50dp"
    tools:context=".MainActivity13">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/cake1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rec2info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView17"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:text="@string/reinfo2"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_cake1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@id/rec2info"
        android:layout_marginTop="20dp"
        android:onClick="navigate2"
        android:text="@string/rec2info" />


</RelativeLayout>
</ScrollView>