<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/food6"
    android:paddingStart="100dp"
    android:paddingTop="100dp"
    android:paddingEnd="100dp"
    android:paddingBottom="50dp"
    tools:context=".MainActivity14">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/banpeelhead1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/banpeelrec1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView18"
        android:layout_marginTop="41dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:text="@string/banpeelrec1info"

        android:textColor="#000000" />

    <Button
        android:id="@+id/button_bancake1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/banpeelrec1"
        android:layout_marginTop="38dp"
        android:onClick="navigate3"
        android:text="@string/banpeelinfo1" />

</RelativeLayout>
</ScrollView>